[metadata]
name = interview_app
description = An interview project to showcase @tamaslukacs python skills.
author = Tamas Lukacs
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
version = 0.1.0
[options]
packages =
    interview_app

python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
interview_app = py.typed

[flake8]
max-line-length = 160
ignore = F811,F405,E127,F403,E126

[pytest]
norecursedirs=tests/helpers